--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ p {
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.8);
     border-radius: 25px;
+    color: #f8f8f8;
     font-size: 1.2rem;
     padding: 0.7rem 1.5rem;
 }
